Archive2/83/0fdd982167a4e8/main.cpp
class A
{
    int foo() {return 1;}
    void goo( decltype(((A*)nullptr)->foo()) i) {}
};
